# xpath-to-json

./: Cargo.toml  README.md  SUMMARY.md  install.sh
examples/: calendar2.html  dividend-details-config.json  dividend_AGNC.html  dividend_calendar.html  ex-dividend-config.json  slickdeals_amazon.json
src/: main.rs
